# BodyBuddy-Server

./: .env.example  dependencies.py  main.py  nutrition_agent.py  pyproject.toml  requirements.txt
controllers/: nutrition_controller.py
routers/: Nutrition_Router.py
